Gitops/apps/manifests/ingress_vault.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault
  namespace: vault
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: "/$2"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_redirect ~^(/.*)$ /vault$1;
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /vault(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: vault
            port:
              number: 8200
